--- a/polytest.html
+++ b/polytest.html
@@ -1,58 +1,9 @@
 <head>
   <title>polytest</title>
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <link rel="import" href="/bower_components/font-roboto/roboto.html">
-  <link rel="import" href="/bower_components/core-header-panel/core-header-panel.html">
-  <link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
-  <link rel="import" href="/bower_components/core-icon-button/core-icon-button.html">
-  <link rel="import" href="/bower_components/paper-input/paper-input.html">
-  <link rel="import" href="/bower_components/paper-button/paper-button.html">
-  <link rel="import" href="/bower_components/paper-tabs/paper-tabs.html">
-  <link rel="import" href="/bower_components/paper-dialog/paper-dialog-transition.html">
-  <link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
-  <link rel="import" href="/bower_components/paper-shadow/paper-shadow.html">
-  <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
-  <link rel="import" href="/components/periode-card.html">
+  <link rel="import" href="/components/music-demo.html">
 </head>
 
 <body>
-  {{> layout}}
+  <music-demo></music-demo>
 </body>
-
-<template name="layout">
-  <paper-dialog heading="Authentication" transition="paper-dialog-transition-bottom">
-      <paper-input label="username"></paper-input>
-      <paper-input type="password" label="password"></paper-input>
-      <paper-button label="Login" affirmative autofocus></paper-button>
-  </paper-dialog>
-
-  <core-header-panel condenses>
-    <core-toolbar>
-      <div flex><h3>Haltere</h3></div>
-      <paper-button raised success>Login</paper-button>
-      <core-icon-button icon="search"></core-icon-button>
-      <core-icon-button icon="more-vert"></core-icon-button>
-      <!--div class="fit bottom" horizontal layout>
-      <paper-tabs id="tabs" selected="all" self-end>
-        <paper-tab name="all">Blabla</paper-tab>
-        <paper-tab name="favorites">Bloblo</paper-tab>
-      </paper-tabs>
-      </div-->
-    </core-toolbar>
-    <div class="container" layout vertical center>
-      {{#each cards}}
-        {{> card}}
-      {{/each}}
-    </div>
-  </core-header-panel>
-</template>
-
-<template name="card">
-      <periode-card>
-        <paper-shadow z="1"></paper-shadow>
-        <h2>{{name}}</h2>
-        <h3>{{periode}}</h3>
-        <p entreprise>{{reportent}}</p>
-        <p iut>{{reportiut}}</p>
-      </periode-card>
-</template>
