Added meteor-collection and meteor-subscribe

--- a/polytest.html
+++ b/polytest.html
@@ -2,8 +2,10 @@
   <title>polytest</title>
   <link rel="import" href="/bower_components/font-roboto/roboto.html">
   <link rel="import" href="/components/music-demo.html">
+  <link rel="import" href="/components/meteor-collection.html">
 </head>
 
 <body>
-  <music-demo></music-demo>
+  bla
+  <meteor-test></meteor-test>
 </body>
