--- a/polytest.html
+++ b/polytest.html
@@ -2,10 +2,8 @@
   <title>polytest</title>
   <link rel="import" href="/bower_components/font-roboto/roboto.html">
   <link rel="import" href="/components/music-demo.html">
-  <link rel="import" href="/components/meteor-collection.html">
 </head>
 
 <body>
-  bla
-  <meteor-test></meteor-test>
+  <music-demo></music-demo>
 </body>
