Clean project layout

--- a/client/music.html
+++ b/client/music.html
@@ -1,5 +1,5 @@
 <head>
-  <title>polytest</title>
+  <title>Music</title>
   <link rel="import" href="/bower_components/font-roboto/roboto.html">
   <link rel="import" href="/components/music-demo.html">
 </head>
