Renamed music-app component

--- a/client/music.html
+++ b/client/music.html
@@ -1,9 +1,9 @@
 <head>
   <title>Music</title>
   <link rel="import" href="/bower_components/font-roboto/roboto.html">
-  <link rel="import" href="/components/music-demo.html">
+  <link rel="import" href="/components/music-app.html">
 </head>
 
 <body>
-  <music-demo></music-demo>
+  <music-app></music-app>
 </body>
