Migrated to polymer 0.9 beta

--- a/client/music.html
+++ b/client/music.html
@@ -1,6 +1,10 @@
 <head>
   <title>Music</title>
-  <link rel="import" href="/bower_components/font-roboto/roboto.html">
+  <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script>
+    window.Polymer = window.Polymer || {};
+    window.Polymer.dom = 'shady';
+  </script>
   <link rel="import" href="/components/music-app.html">
 </head>
 
